GNOME Bugzilla – Bug 749892
Fix gtk_tree_model_get_iter_first() retval
Last modified: 2015-05-27 09:10:51 UTC
From coverity: check_return: Calling "gtk_tree_model_get_iter_first" without checking return value (as is done elsewhere 36 out of 45 times).
Created attachment 303992 [details] [review] common: Fix gtk_tree_model_get_iter_first() retval
Created attachment 303993 [details] [review] keyboard: Fix gtk_tree_model_get_iter_first() retval
Created attachment 303994 [details] [review] sound: Fix gtk_tree_model_get_iter_first() retval
Created attachment 303995 [details] [review] user-accounts: Fix gtk_tree_model_get_iter_first() retval
Created attachment 303996 [details] [review] shell: Fix gtk_tree_model_get_iter_first() retval
Created attachment 303997 [details] [review] network: Fix gtk_tree_model_get_iter_first() retval And don't select the first item when removing the item fails.
Review of attachment 303992 [details] [review]: right, the model can't ever be empty
Review of attachment 303993 [details] [review]: ++
Review of attachment 303994 [details] [review]: can't be empty, right
Review of attachment 303995 [details] [review]: suppose this can't ever be empty either otherwise something is seriously wrong (not ever the current user account would be there...)
Review of attachment 303996 [details] [review]: sure, can't be empty
Review of attachment 303997 [details] [review]: changes behavior but fine, I don't think people will be mass removing network devices
Attachment 303992 [details] pushed as 41bb1a6 - common: Fix gtk_tree_model_get_iter_first() retval Attachment 303993 [details] pushed as 71de309 - keyboard: Fix gtk_tree_model_get_iter_first() retval Attachment 303994 [details] pushed as b410ec3 - sound: Fix gtk_tree_model_get_iter_first() retval Attachment 303995 [details] pushed as 9341460 - user-accounts: Fix gtk_tree_model_get_iter_first() retval Attachment 303996 [details] pushed as 3ff7c61 - shell: Fix gtk_tree_model_get_iter_first() retval Attachment 303997 [details] pushed as 3569b2d - network: Fix gtk_tree_model_get_iter_first() retval