common: Fix gtk_tree_model_get_iter_first() retval

https://bugzilla.gnome.org/show_bug.cgi?id=749892